--- a/map3.html
+++ b/map3.html
@@ -6,6 +6,24 @@
 	<meta name='viewport' content='width=device-width'>
 </head>
 <body>
+<div id='mapcontainer' style='width:100%; height:300px; z-index:0; border:1px solid #333;'></div>
+
+<link rel='stylesheet' href='https://unpkg.com/maplibre-gl/dist/maplibre-gl.css' />
+<script src='https://unpkg.com/maplibre-gl/dist/maplibre-gl.js'></script>
+
+<script>
+function init_map() {
+	const map =  new maplibregl.Map({
+		container: 'mapcontainer',
+		style: 'https://gsi-cyberjapan.github.io/gsivectortile-mapbox-gl-js/std.json', 
+		center: [142.14, 43.65], 
+		zoom: 5, 
+		pitch: 0 
+	});
+}
+
+//ダウンロード時に初期化する
+window.addEventListener('DOMContentLoaded', init_map());
 
 
 </body>
