--- a/map3.html
+++ b/map3.html
@@ -6,7 +6,7 @@
 	<meta name='viewport' content='width=device-width'>
 </head>
 <body>
-<div id='mapcontainer' style='width:100%; height:300px; z-index:0; border:1px solid #333;'></div>
+<div id='mapcontainer' style='width:100%; height:800px; z-index:0; border:1px solid #333;'></div>
 
 <link rel='stylesheet' href='https://unpkg.com/maplibre-gl/dist/maplibre-gl.css' />
 <script src='https://unpkg.com/maplibre-gl/dist/maplibre-gl.js'></script>
@@ -20,8 +20,8 @@ function init_map() {
 		zoom: 5, 
 		pitch: 0 
 	});
-	map.addControl(new maplibregl.NavigationControl(), 'top-right');
-	map.addControl(new maplibregl.ScaleControl(), 'bottom-left');
+	<!-- map.addControl(new maplibregl.NavigationControl(), 'top-right');
+	map.addControl(new maplibregl.ScaleControl(), 'bottom-left'); -->
 }
 
 //ダウンロード時に初期化する
