--- a/map3.html
+++ b/map3.html
@@ -2,32 +2,33 @@
 <html lang="jp">
 
 <head>
-	<meta http-equiv='content-type' charset='utf-8'>
-	<meta name='viewport' content='width=device-width'>
+<title>htmlMap</title>
+<meta http-equiv='content-type' charset='utf-8'>
+<meta name='viewport' content='width=device-width'>
 </head>
 <body>
-<div id='mapcontainer' style='width:100%; height:800px; z-index:0; border:1px solid #333;'></div>
+<!-- 埋め込みマップのdivタグ。マップサイズはwidth（幅）とheight（高さ）で決まる -->
+<div id='mapcontainer' style='width:100%; height:300px; z-index:0; border:1px solid #333;'></div>
 
+<!-- 以下 MapLibre のJavaScriptとCSS -->
 <link rel='stylesheet' href='https://unpkg.com/maplibre-gl/dist/maplibre-gl.css' />
 <script src='https://unpkg.com/maplibre-gl/dist/maplibre-gl.js'></script>
 
 <script>
 function init_map() {
-	const map =  new maplibregl.Map({
-		container: 'mapcontainer',
-		style: 'https://gsi-cyberjapan.github.io/gsivectortile-mapbox-gl-js/std.json', 
-		center: [139.875, 39.077], 
-		zoom: 9, 
-		pitch: 0 
-	});
-	<!-- map.addControl(new maplibregl.NavigationControl(), 'top-right');
-	map.addControl(new maplibregl.ScaleControl(), 'bottom-left'); -->
+    const map =  new maplibregl.Map({
+        container: 'mapcontainer',
+        style: 'https://gsi-cyberjapan.github.io/gsivectortile-mapbox-gl-js/std.json', 
+        center: [142.14, 43.65], 
+        zoom: 5, 
+        pitch: 0 
+    });
 }
 
 //ダウンロード時に初期化する
 window.addEventListener('DOMContentLoaded', init_map());
+
 </script>
-
-
 </body>
 </html>
+<!-- [139.875, 39.077] -->
