--- a/map3.html
+++ b/map3.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
-<html lang="jp">
+<html lang="ja">
 
 <head>
-<title>htmlMap</title>
-<meta http-equiv='content-type' charset='utf-8'>
-<meta name='viewport' content='width=device-width'>
+    <meta charset="utf-8">
+    <title>サンプル</title>
+    <script src='https://unpkg.com/maplibre-gl/dist/maplibre-gl.js'></script>
+    <link href='https://unpkg.com/maplibre-gl/dist/maplibre-gl.css' rel='stylesheet' />
+    <style type="text/css">
+        html, body{
+            height: 100%;
+        }
+        #map{
+            height: 100%;
+        }
+    </style>
 </head>
+
 <body>
-<!-- 埋め込みマップのdivタグ。マップサイズはwidth（幅）とheight（高さ）で決まる -->
-<div id='mapcontainer' style='width:100%; height:300px; z-index:0; border:1px solid #333;'></div>
-
-<!-- 以下 MapLibre のJavaScriptとCSS -->
-<link rel='stylesheet' href='https://unpkg.com/maplibre-gl/dist/maplibre-gl.css' />
-<script src='https://unpkg.com/maplibre-gl/dist/maplibre-gl.js'></script>
-
+    <div id="map"></div>
+</body>
 <script>
-function init_map() {
-    const map =  new maplibregl.Map({
-        container: 'mapcontainer',
-        style: 'https://gsi-cyberjapan.github.io/gsivectortile-mapbox-gl-js/std.json', 
-        center: [142.14, 43.65], 
-        zoom: 5, 
-        pitch: 0 
-    });
-}
-
-//ダウンロード時に初期化する
-window.addEventListener('DOMContentLoaded', init_map());
+const map =  new maplibregl.Map({
+    container: 'map',
+    style: 'https://tile.openstreetmap.jp/styles/osm-bright-ja/style.json', // ①
+    center: [139.875, 39.077],
+    zoom: 15,
+    pitch: 0
+})
 
 </script>
 </body>
