--- a/map3.html
+++ b/map3.html
@@ -8,7 +8,7 @@
     <link href='https://unpkg.com/maplibre-gl/dist/maplibre-gl.css' rel='stylesheet' />
     <style type="text/css">
         html, body{
-            height: 100%;
+            height: 800px;
         }
         #map{
             height: 100%;
