--- a/map3.html
+++ b/map3.html
@@ -22,7 +22,7 @@
 <script>
 const map =  new maplibregl.Map({
     container: 'map',
-    style: 'https://tile.openstreetmap.jp/styles/osm-bright-ja/style.json', // ①
+    style: 'https://tile.openstreetmap.jp/styles/osm-bright-ja/style.json',
     center: [139.875, 39.077],
     zoom: 15,
     pitch: 0
@@ -31,4 +31,7 @@ const map =  new maplibregl.Map({
 </script>
 </body>
 </html>
-<!-- [139.875, 39.077] -->
+<!--
+[139.875, 39.077]
+https://zenn.dev/mierune_inc/books/location-engineering/viewer/part4
+-->
