--- a/map3.html
+++ b/map3.html
@@ -23,7 +23,9 @@
 const map =  new maplibregl.Map({
     container: 'map',
     <!-- style: 'https://tile.openstreetmap.jp/styles/osm-bright-ja/style.json', -->
-    style: 'https://gsi-cyberjapan.github.io/gsivectortile-mapbox-gl-js/std.json',
+    <!-- style: 'https://gsi-cyberjapan.github.io/gsivectortile-mapbox-gl-js/std.json', -->
+    style: 'https://gsi-cyberjapan.github.io/gsivectortile-mapbox-gl-js/pale.json',
+    <!-- style: 'https://gsi-cyberjapan.github.io/gsivectortile-mapbox-gl-js/blank.json', -->
     center: [139.875, 39.077],
     zoom: 15,
     pitch: 0
