--- a/map3.html
+++ b/map3.html
@@ -23,14 +23,14 @@
 const map =  new maplibregl.Map({
     container: 'map',
     <!-- style: 'https://tile.openstreetmap.jp/styles/osm-bright-ja/style.json', -->
-    <!-- style: 'https://gsi-cyberjapan.github.io/gsivectortile-mapbox-gl-js/std.json', -->
-    style: 'https://gsi-cyberjapan.github.io/gsivectortile-mapbox-gl-js/pale.json',
-    <!-- style: 'https://gsi-cyberjapan.github.io/gsivectortile-mapbox-gl-js/blank.json', -->
+    <!-- style: 'https://maps.gsi.go.jp/vector/data/std.json', -->
+    style: 'https://maps.gsi.go.jp/vector/data/pale.json',
+    <!-- style: 'https://maps.gsi.go.jp/vector/data/blank.json', -->
     center: [139.875, 39.077],
     zoom: 15,
     pitch: 0
 })
-
+<!-- https://github.com/gsi-cyberjapan/gsimaps-vector-experiment/ -->
 </script>
 </body>
 </html>
@@ -39,4 +39,5 @@ const map =  new maplibregl.Map({
 https://zenn.dev/mierune_inc/books/location-engineering/viewer/part4
 https://raw.githubusercontent.com/gsi-cyberjapan/optimal_bvmap/52ba56f645334c979998b730477b2072c7418b94/style/std.json
 https://tile.openstreetmap.jp/styles/osm-bright-ja/style.json
+https://maps.gsi.go.jp/vector/data/std.json
 -->
