--- a/map4.html
+++ b/map4.html
@@ -17,8 +17,7 @@
 </head>
 
 <body>
-    <div id="map"></div>
-</body>
+ test   <div id="map"></div>
 <script>
 let protocol = new pmtiles.Protocol();
 maplibregl.addProtocol("pmtiles",protocol.tile);
