--- a/map4.html
+++ b/map4.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>サンプル</title>
+    <title>国土地理院最適化ベクトルタイル</title>
     <script src='https://unpkg.com/maplibre-gl/dist/maplibre-gl.js'></script>
     <link href='https://unpkg.com/maplibre-gl/dist/maplibre-gl.css' rel='stylesheet' />
     <style type="text/css">
