--- a/map4.html
+++ b/map4.html
@@ -6,6 +6,7 @@
     <title>国土地理院最適化ベクトルタイル</title>
     <script src='https://unpkg.com/maplibre-gl/dist/maplibre-gl.js'></script>
     <link href='https://unpkg.com/maplibre-gl/dist/maplibre-gl.css' rel='stylesheet' />
+    <script src="https://unpkg.com/pmtiles/dist/pmtiles.js"></script>
     <style type="text/css">
         html, body{
             height: 800px;
