--- a/map4.html
+++ b/map4.html
@@ -26,7 +26,7 @@ maplibregl.addProtocol("pmtiles",protocol.tile);
 var map = new maplibregl.Map({
   container: 'map',
   hash: true,
-  style: './style/skeleton.json',
+  style: 'https://maps.gsi.go.jp/vector/data/std.json',
   center: [139.875, 39.077], 
   zoom: 15,
   maxZoom: 17.99,
