--- a/map4.html
+++ b/map4.html
@@ -18,7 +18,8 @@
 </head>
 
 <body>
- test   <div id="map"></div>
+ test2
+    <div id="map"></div>
 <script>
 let protocol = new pmtiles.Protocol();
 maplibregl.addProtocol("pmtiles",protocol.tile);
