mod style to gsi source

--- a/map4.html
+++ b/map4.html
@@ -7,14 +7,32 @@
     <script src='https://unpkg.com/maplibre-gl/dist/maplibre-gl.js'></script>
     <link href='https://unpkg.com/maplibre-gl/dist/maplibre-gl.css' rel='stylesheet' />
     <script src="https://unpkg.com/pmtiles/dist/pmtiles.js"></script>
-    <style type="text/css">
-        html, body{
-            height: 800px;
-        }
-        #map{
-            height: 100%;
-        }
-    </style>
+<style>
+body { margin:0; padding:0; }
+#map {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+}
+#map canvas {
+  cursor: crosshair;
+}
+#menu {
+	position: absolute;
+	top:0%;
+	right:0%;
+	background: #3e3e3ec7;
+	color: #ffffff;
+	padding: 10px;
+	font-family: 'Open Sans', sans-serif;
+}
+#menu ul{
+	list-style:none;
+	padding:0;
+	margin:0;
+}
+</style>
 </head>
 
 <body>
