--- a/map4.html
+++ b/map4.html
@@ -45,7 +45,7 @@ maplibregl.addProtocol("pmtiles",protocol.tile);
 var map = new maplibregl.Map({
   container: 'map',
   hash: true,
-  style: 'https://maps.gsi.go.jp/vector/data/std.json',
+  style: 'https://gsi-cyberjapan.github.io/optimal_bvmap/style/std.json',
   center: [139.875, 39.077], 
   zoom: 15,
   maxZoom: 17.99,
