--- a/map4.html
+++ b/map4.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>国土地理院最適化ベクトルタイル</title>
+    <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
     <script src='https://unpkg.com/maplibre-gl/dist/maplibre-gl.js'></script>
     <link href='https://unpkg.com/maplibre-gl/dist/maplibre-gl.css' rel='stylesheet' />
     <script src="https://unpkg.com/pmtiles/dist/pmtiles.js"></script>
