--- a/map3.html
+++ b/map3.html
@@ -22,8 +22,8 @@
 <script>
 const map =  new maplibregl.Map({
     container: 'map',
-    style: 'https://tile.openstreetmap.jp/styles/osm-bright-ja/style.json',
-    <!-- style: 'https://maps.gsi.go.jp/vector/data/std.json', -->
+    <!-- style: 'https://tile.openstreetmap.jp/styles/osm-bright-ja/style.json', -->
+    style: 'https://maps.gsi.go.jp/vector/data/std.json',
     <!-- style: 'https://maps.gsi.go.jp/vector/data/pale.json', -->
     <!-- style: 'https://maps.gsi.go.jp/vector/data/blank.json', -->
     center: [139.875, 39.077],
