--- a/map3.html
+++ b/map3.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <title>サンプル</title>
-    <script src='https://unpkg.com/maplibre-gl/dist/maplibre-gl.js'></script>
-    <link href='https://unpkg.com/maplibre-gl/dist/maplibre-gl.css' rel='stylesheet' />
+    <script src='https://unpkg.com/maplibre-gl@5.16.0/dist/maplibre-gl.js'></script>
+    <link href='https://unpkg.com/maplibre-gl@5.16.0/dist/maplibre-gl.css' rel='stylesheet' />
     <style type="text/css">
         html, body{
             height: 800px;
