--- a/map3.html
+++ b/map3.html
@@ -12,7 +12,7 @@
     <link href='https://unpkg.com/maplibre-gl/dist/maplibre-gl.css' rel='stylesheet' />
     <style type="text/css">
         html, body{
-            height: 800px;
+            height: 100%;
         }
         #map{
             height: 100%;
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-test
+test1
     <div id="map"></div>
 <script>
 const map =  new maplibregl.Map({
