--- a/map3.html
+++ b/map3.html
@@ -32,7 +32,7 @@ const map =  new maplibregl.Map({
     <!-- style: 'https://maps.gsi.go.jp/vector/data/blank.json', -->
     center: [139.875, 39.077],
     zoom: 15,
-    maplibreLogo: true,
+    <!-- maplibreLogo: true, -->
 })
 <!-- https://github.com/gsi-cyberjapan/gsimaps-vector-experiment/ -->
 </script>
