--- a/map4.html
+++ b/map4.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <title>国土地理院最適化ベクトルタイル</title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-    <script src='https://unpkg.com/maplibre-gl@5.16.0/dist/maplibre-gl.js'></script>
-    <link href='https://unpkg.com/maplibre-gl@5.16.0/dist/maplibre-gl.css' rel='stylesheet' />
-    <script src="https://unpkg.com/pmtiles@4.3.2/dist/pmtiles.js"></script>
+    <script src='https://unpkg.com/maplibre-gl/dist/maplibre-gl.js'></script>
+    <link href='https://unpkg.com/maplibre-gl/dist/maplibre-gl.css' rel='stylesheet' />
+    <script src="https://unpkg.com/pmtiles/dist/pmtiles.js"></script>
 <style>
 body { margin:0; padding:0; }
 #map {
@@ -53,4 +53,9 @@ map.addControl(new maplibregl.NavigationControl(), 'bottom-right');
 https://zenn.dev/mierune_inc/books/location-engineering/viewer/part4
 https://raw.githubusercontent.com/gsi-cyberjapan/optimal_bvmap/52ba56f645334c979998b730477b2072c7418b94/style/std.json
 https://tile.openstreetmap.jp/styles/osm-bright-ja/style.json
+
+https://gsi-cyberjapan.github.io/optimal_bvmap/style/std.json
+
+https://raw.githubusercontent.com/gsi-cyberjapan/optimal_bvmap/refs/heads/main/style/std.json
+
 -->
