--- a/map4.html
+++ b/map4.html
@@ -23,7 +23,7 @@ body { margin:0; padding:0; }
 </head>
 
 <body>
- test8
+ test9
     <div id="map"></div>
 <script>
 let protocol = new pmtiles.Protocol();
@@ -32,8 +32,8 @@ maplibregl.addProtocol("pmtiles",protocol.tile);
 var map = new maplibregl.Map({
   container: 'map',
   hash: true,
-  style: 'https://raw.githubusercontent.com/gsi-cyberjapan/optimal_bvmap/52ba56f645334c979998b730477b2072c7418b94/style/std.json',
-  <!-- style: 'https://gsi-cyberjapan.github.io/optimal_bvmap/style/std.json', -->
+  <!-- style: 'https://raw.githubusercontent.com/gsi-cyberjapan/optimal_bvmap/52ba56f645334c979998b730477b2072c7418b94/style/std.json', -->
+  style: 'https://gsi-cyberjapan.github.io/optimal_bvmap/style/std.json',
   center: [139.875, 39.077], 
   zoom: 14,
   maxZoom: 17.99,
