--- a/map4.html
+++ b/map4.html
@@ -66,7 +66,8 @@ map.addControl(new maplibregl.NavigationControl(), 'bottom-right');
 // スケール表示
 map.addControl(new maplibregl.ScaleControl({
     maxWidth: 200,
-    unit: 'metric'
+    unit: 'metric',
+    'bottom-left'
 }));
 
 let check1 = document.getElementById('style');
