--- a/map4.html
+++ b/map4.html
@@ -37,7 +37,7 @@ body { margin:0; padding:0; }
 </head>
 
 <body>
- test13
+ test14
     <div id="map"></div>
 <div id="menu">
 	<ul>
@@ -66,9 +66,9 @@ map.addControl(new maplibregl.NavigationControl(), 'bottom-right');
 // スケール表示
 map.addControl(new maplibregl.ScaleControl({
     maxWidth: 200,
-    unit: 'metric',
-    'bottom-left'
-});
+    unit: 'metric'
+})
+, 'bottom-left')
 
 let check1 = document.getElementById('style');
 
