--- a/map5.html
+++ b/map5.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <title>GSI / OSM 切替マップ（MapLibre）</title>
   <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
-  <link href="https://cdn.jsdelivr.net/npm/maplibre-gl@5.15.0/dist/maplibre-gl.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/maplibre-gl/dist/maplibre-gl.css" rel="stylesheet" />
   <style>
     body,html,#map { height:100%; margin:0; }
     .panel { position:absolute; top:8px; right:8px; background:#fffccf; padding:8px; border-radius:6px; font-size:13px; box-shadow:0 1px 6px rgba(0,0,0,0.3); }
@@ -39,7 +39,7 @@
   </div>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/maplibre-gl@5.15.0/dist/maplibre-gl.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/maplibre-gl/dist/maplibre-gl.min.js"></script>
 <script>
 const map = new maplibregl.Map({
   container: 'map',
